fix: editor height and z-index

--- a/base/static/css/gob.cl.scss
+++ b/base/static/css/gob.cl.scss
@@ -15,3 +15,7 @@
     }
   }
 }
+
+.frame.cms {
+  z-index: 1;
+}
